[package]
name = "ecow"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/typst/ecow"
keywords = ["string", "vector", "vec", "SSO", "inline", "CoW"]
description = """
Compact, clone-on-write vector and string.
"""

[target.'cfg(loom)'.dependencies]
loom = "0.5"
